--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
       </div>
       <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-mobile-12 wk-tab-12 card-container">
         <div class="card">
-          <img class="card-img" src="./404.avif">
+          <img class="card-img" src="./sifat.jpgf">
           <p class="text-blk name">
-            Nobody
+            Junaid Tasnim
           </p>
           <p class="text-blk position">
-            Unavailable
+            Member
           </p>
         </div>
       </div>
