--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </div>
       <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-mobile-12 wk-tab-12 card-container">
         <div class="card">
-          <img class="card-img" src="./sifat.jpg">
+          <img class="card-img" src="sifat.jpg">
           <p class="text-blk name">
             Junaid Tasnim
           </p>
